--- a/.github/workflows/sonarqube.yml
+++ b/.github/workflows/sonarqube.yml
@@ -18,7 +18,7 @@ jobs:
       - name: Make gradlew executable
         run: chmod +x gradlew
       - name: Build Project
-        run: ./gradlew build -x test
+        run: ./gradlew build
       - name: SonarQube Scan
         uses: sonarsource/sonarcloud-github-action@v2
         with:
