--- a/.github/workflows/sonarqube.yml
+++ b/.github/workflows/sonarqube.yml
@@ -2,6 +2,8 @@ name: Sonar Scan
 
 on:
   push:
+    branches:
+      - main  # Adjust if necessary
 
 jobs:
   build-and-analyze:
@@ -17,14 +19,16 @@ jobs:
           cache: "gradle"
       - name: Make gradlew executable
         run: chmod +x gradlew
-      - name: Build Project
-        run: ./gradlew build
+      - name: Build Project (Run tests and collect coverage)
+        run: ./gradlew build  # Removed `-x test` to run the tests
       - name: SonarQube Scan
         uses: sonarsource/sonarcloud-github-action@v2
         with:
           args: >
-            -D sonar.sources=src
-            -D sonar.java.binaries=build/classes/java/main
+            -Dsonar.java.binaries=build/classes/java/main
+            -Dsonar.java.test.binaries=build/test-classes
+            -Dsonar.junit.reportPaths=build/test-results/test  # Path to JUnit results (if applicable)
+            -Dsonar.jacoco.reportPaths=build/jacoco/test.exec  # Path to JaCoCo coverage report
         env:
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
           SONAR_HOST_URL: 'https://sonarcloud.io/'
