Fixed sonar cloud again yare-yare.

--- a/.github/workflows/sonarqube.yml
+++ b/.github/workflows/sonarqube.yml
@@ -2,8 +2,6 @@ name: Sonar Scan
 
 on:
   push:
-    branches:
-      - main  # Adjust if necessary
 
 jobs:
   build-and-analyze:
@@ -20,15 +18,15 @@ jobs:
       - name: Make gradlew executable
         run: chmod +x gradlew
       - name: Build Project (Run tests and collect coverage)
-        run: ./gradlew build  # Removed `-x test` to run the tests
+        run: ./gradlew build
       - name: SonarQube Scan
         uses: sonarsource/sonarcloud-github-action@v2
         with:
           args: >
             -Dsonar.java.binaries=build/classes/java/main
             -Dsonar.java.test.binaries=build/test-classes
-            -Dsonar.junit.reportPaths=build/test-results/test  # Path to JUnit results (if applicable)
-            -Dsonar.jacoco.reportPaths=build/jacoco/test.exec  # Path to JaCoCo coverage report
+            -Dsonar.junit.reportPaths=build/test-results/test
+            -Dsonar.jacoco.reportPaths=build/jacoco/test.exec
         env:
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
           SONAR_HOST_URL: 'https://sonarcloud.io/'
